kubernetes/environments/stg-prd/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mlflow-tracking-server
  name: mlflow-tracking-server
  namespace: ${NAMESPACE}
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: mlflow-tracking-server
