kubernetes/environments/stg-prd/mlflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-tracking-server
  namespace: ${NAMESPACE}
  labels:
    app: mlflow-tracking-server
    team: ${TEAM}
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx-office
  rules:
  - host: "mlflow-tracking-server.${ENVIRONMENT}.travix.com"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: mlflow-tracking-server
            port: 
              number: 5000
  - host: "mlflow-tracking-server.${ENVIRONMENT}.travix.com"
    http:
      paths:
      - path: /api/
        pathType: ImplementationSpecific
        backend:
          service:
            name: mlflow-tracking-server
            port: 
              number: 5000
